--- a/tests/Euclid.Sdk.TestComposite/packages.config
+++ b/tests/Euclid.Sdk.TestComposite/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="AutoMapper" version="2.0.0" />
   <package id="Castle.Core" version="2.5.2" />
-  <package id="Castle.Windsor" version="2.5.3" />
+  <package id="Castle.Windsor" version="2.5.4" />
   <package id="CommonServiceLocator" version="1.0" />
   <package id="CommonServiceLocator.WindsorAdapter" version="1.0" />
   <package id="EntityFramework" version="4.1.10331.0" />
@@ -14,6 +14,11 @@
   <package id="jQuery.vsdoc" version="1.5.1" />
   <package id="log4net" version="1.2.10" />
   <package id="Modernizr" version="1.7" />
+  <package id="Nancy" version="0.9.0" />
+  <package id="Nancy.Bootstrappers.Windsor" version="0.9.0" />
+  <package id="Nancy.Hosting.Aspnet" version="0.9.0" />
+  <package id="Nancy.Viewengines.Razor" version="0.9.0" />
+  <package id="NConfig" version="1.0.12" />
   <package id="Newtonsoft.Json" version="4.0.2" />
   <package id="NHibernate" version="3.2.0.4000" />
   <package id="routedebugger" version="2.0.0.7" />
