Add hosting fabric for test agent

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -27,5 +27,6 @@
   <repository path="..\tests\Euclid.Sdk.Specifications\packages.config" />
   <repository path="..\tests\Euclid.Sdk.TestAgent\packages.config" />
   <repository path="..\tests\Euclid.Sdk.TestComposite\packages.config" />
+  <repository path="..\tests\Euclid.Sdk.TestHostingFabric\packages.config" />
   <repository path="..\tests\Euclid.Sdk.UnitTests\packages.config" />
 </repositories>
