--- a/apps/Forum/azure/AzureForumHost/AzureForumHost.csproj
+++ b/apps/Forum/azure/AzureForumHost/AzureForumHost.csproj
@@ -190,7 +190,9 @@
     <Compile Include="WorkerRole.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Config\bluejay.custom.config">
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
