serve handlebar templates as static content

--- a/src/sdk/CompositeInspector/CompositeInspector.csproj
+++ b/src/sdk/CompositeInspector/CompositeInspector.csproj
@@ -158,25 +158,25 @@
     <EmbeddedResource Include="Views\Shared\Frameset.cshtml" />
     <EmbeddedResource Include="Views\Shared\_Layout.cshtml" />
     <EmbeddedResource Include="Views\view-agent.cshtml" />
-    <EmbeddedResource Include="Views\templates\modal\read-model.cshtml" />
-    <EmbeddedResource Include="Views\templates\modal\form-container.cshtml" />
-    <EmbeddedResource Include="Views\templates\modal\publication-record.cshtml" />
-    <EmbeddedResource Include="Views\templates\commands.cshtml" />
-    <EmbeddedResource Include="Views\templates\queries.cshtml" />
-    <EmbeddedResource Include="Views\templates\read-models.cshtml" />
-    <EmbeddedResource Include="Views\templates\agent.cshtml" />
+    <EmbeddedResource Include="Views\templates\modal\read-model.html" />
+    <EmbeddedResource Include="Views\templates\modal\form-container.html" />
+    <EmbeddedResource Include="Views\templates\modal\publication-record.html" />
+    <EmbeddedResource Include="Views\templates\commands.html" />
+    <EmbeddedResource Include="Views\templates\queries.html" />
+    <EmbeddedResource Include="Views\templates\read-models.html" />
+    <EmbeddedResource Include="Views\templates\agent.html" />
     <EmbeddedResource Include="Views\view-composite.cshtml" />
-    <EmbeddedResource Include="Views\templates\composite.cshtml" />
-    <EmbeddedResource Include="Views\templates\input-models.cshtml" />
-    <EmbeddedResource Include="Views\templates\modal\input-model.cshtml" />
-    <EmbeddedResource Include="Views\templates\agents.cshtml" />
-    <EmbeddedResource Include="Views\templates\modal\euclid-error.cshtml" />
-    <EmbeddedResource Include="Views\templates\modal\polling.cshtml" />
-    <EmbeddedResource Include="Views\templates\composite-link.cshtml" />
-    <EmbeddedResource Include="Views\templates\euclid-error.cshtml" />
-    <EmbeddedResource Include="Views\templates\modal\command.cshtml" />
-    <EmbeddedResource Include="Views\templates\modal\query.cshtml" />
-    <EmbeddedResource Include="Views\templates\query-results-table.cshtml" />
+    <EmbeddedResource Include="Views\templates\composite.html" />
+    <EmbeddedResource Include="Views\templates\input-models.html" />
+    <EmbeddedResource Include="Views\templates\modal\input-model.html" />
+    <EmbeddedResource Include="Views\templates\agents.html" />
+    <EmbeddedResource Include="Views\templates\modal\euclid-error.html" />
+    <EmbeddedResource Include="Views\templates\modal\polling.html" />
+    <EmbeddedResource Include="Views\templates\composite-link.html" />
+    <EmbeddedResource Include="Views\templates\euclid-error.html" />
+    <EmbeddedResource Include="Views\templates\modal\command.html" />
+    <EmbeddedResource Include="Views\templates\modal\query.html" />
+    <EmbeddedResource Include="Views\templates\query-results-table.html" />
     <EmbeddedResource Include="Views\view-command-registry.cshtml" />
   </ItemGroup>
   <ItemGroup>
