--- a/apps/Storefront/StorefrontAdminComposite/StorefrontAdminComposite.csproj
+++ b/apps/Storefront/StorefrontAdminComposite/StorefrontAdminComposite.csproj
@@ -246,6 +246,8 @@
     <Content Include="Content\app\templates\store\Promotions.html">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="Content\app\templates\sysadmin\Companies.html" />
+    <Content Include="Content\app\templates\sysadmin\Administrators.html" />
     <Content Include="Content\css\app.css" />
     <Content Include="Content\css\bootstrap-responsive.css" />
     <Content Include="Content\css\bootstrap-responsive.min.css" />
