--- a/apps/Storefront/StorefrontAdminComposite/StorefrontAdminComposite.csproj
+++ b/apps/Storefront/StorefrontAdminComposite/StorefrontAdminComposite.csproj
@@ -255,11 +255,27 @@
     <Content Include="Content\css\bootstrap-responsive.min.css" />
     <Content Include="Content\css\bootstrap.css" />
     <Content Include="Content\css\bootstrap.min.css" />
+    <Content Include="Content\css\flick\images\ui-bg_flat_0_aaaaaa_40x100.png" />
+    <Content Include="Content\css\flick\images\ui-bg_flat_0_eeeeee_40x100.png" />
+    <Content Include="Content\css\flick\images\ui-bg_flat_55_ffffff_40x100.png" />
+    <Content Include="Content\css\flick\images\ui-bg_flat_75_ffffff_40x100.png" />
+    <Content Include="Content\css\flick\images\ui-bg_glass_65_ffffff_1x400.png" />
+    <Content Include="Content\css\flick\images\ui-bg_highlight-soft_100_f6f6f6_1x100.png" />
+    <Content Include="Content\css\flick\images\ui-bg_highlight-soft_25_0073ea_1x100.png" />
+    <Content Include="Content\css\flick\images\ui-bg_highlight-soft_50_dddddd_1x100.png" />
+    <Content Include="Content\css\flick\images\ui-icons_0073ea_256x240.png" />
+    <Content Include="Content\css\flick\images\ui-icons_454545_256x240.png" />
+    <Content Include="Content\css\flick\images\ui-icons_666666_256x240.png" />
+    <Content Include="Content\css\flick\images\ui-icons_ff0084_256x240.png" />
+    <Content Include="Content\css\flick\images\ui-icons_ffffff_256x240.png" />
+    <Content Include="Content\css\flick\jquery-ui-1.8.17.custom.css" />
     <Content Include="Content\img\glyphicons-halflings-white.png" />
     <Content Include="Content\img\glyphicons-halflings.png" />
     <Content Include="Content\js\bootstrap.js" />
     <Content Include="Content\js\bootstrap.min.js" />
     <Content Include="Content\js\handlebars-1.0.0.beta.6.js" />
+    <Content Include="Content\js\jquery-1.7.1.min.js" />
+    <Content Include="Content\js\jquery-ui-1.8.17.custom.min.js" />
     <Content Include="Content\js\min\plugins\sammy.cache-0.7.1.min.js" />
     <Content Include="Content\js\min\plugins\sammy.cache-latest.min.js" />
     <Content Include="Content\js\min\plugins\sammy.data_location_proxy-0.7.1.min.js" />
