--- a/src/sdk/CompositeInspector/CompositeInspector.csproj
+++ b/src/sdk/CompositeInspector/CompositeInspector.csproj
@@ -296,6 +296,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Assets\Styles\bootstrap\bootstrap-subnav.css" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\templates\agent.html" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
