--- a/tests/Euclid.Sdk.TestComposite/Web.config
+++ b/tests/Euclid.Sdk.TestComposite/Web.config
@@ -6,6 +6,7 @@
 <configuration>
   <configSections>
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
+    <section name="glimpse" type="Glimpse.Core.Configuration.GlimpseConfiguration" />
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0" />
@@ -50,13 +51,22 @@
     </pages>
     <httpHandlers>
       <add verb="*" type="Nancy.Hosting.Aspnet.NancyHttpRequestHandler" path="*" />
+      <add path="glimpse.axd" verb="GET,POST" type="Glimpse.Core.Handler" />
     </httpHandlers>
+    <trace writeToDiagnosticsTrace="true" enabled="true" pageOutput="false" />
+    <httpModules>
+      <add name="Glimpse" type="Glimpse.Core.Module" />
+    </httpModules>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true">
       <add name="PerRequestLifestyle" type="Castle.MicroKernel.Lifestyle.PerWebRequestLifestyleModule, Castle.Windsor" />
+      <add name="Glimpse" type="Glimpse.Core.Module,Glimpse.Core" preCondition="integratedMode" />
     </modules>
+    <handlers>
+      <add name="Glimpse" path="glimpse.axd" verb="GET,POST" type="Glimpse.Core.Handler,Glimpse.Core" preCondition="integratedMode" />
+    </handlers>
   </system.webServer>
   <location path="composite">
     <system.webServer>
@@ -135,4 +145,5 @@
       </parameter>
     </appender>
   </log4net>
+  <glimpse enabled="true" />
 </configuration>
