--- a/tests/Euclid.Sdk.TestComposite/packages.config
+++ b/tests/Euclid.Sdk.TestComposite/packages.config
@@ -7,6 +7,8 @@
   <package id="CommonServiceLocator.WindsorAdapter" version="1.0" />
   <package id="EntityFramework" version="4.1.10331.0" />
   <package id="FluentNHibernate" version="1.3.0.717" />
+  <package id="Glimpse" version="0.87" />
+  <package id="Glimpse.Mvc3" version="0.87" />
   <package id="Iesi.Collections" version="3.2.0.4000" />
   <package id="jQuery" version="1.5.1" />
   <package id="jQuery.UI.Combined" version="1.8.11" />
