very rough initial pass of inspector shell, still using current inspector code for the most part

--- a/src/sdk/CompositeInspector/CompositeInspector.csproj
+++ b/src/sdk/CompositeInspector/CompositeInspector.csproj
@@ -286,6 +286,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Views\templates\log-entry-table.html" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\new.html" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
