--- a/src/sdk/CompositeInspector/CompositeInspector.csproj
+++ b/src/sdk/CompositeInspector/CompositeInspector.csproj
@@ -289,6 +289,95 @@
   <ItemGroup>
     <EmbeddedResource Include="Views\new.html" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Assets\Scripts\inspector\inspector.js" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.cache-0.7.1.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.cache-latest.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.data_location_proxy-0.7.1.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.data_location_proxy-latest.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.ejs-0.7.1.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.ejs-latest.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.exceptional-0.7.1.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.exceptional-latest.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.flash-0.7.1.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.flash-latest.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.form-0.7.1.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.form-latest.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.form_2_json-0.7.1.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.form_2_json-latest.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.googleanalytics-0.7.1.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.googleanalytics-latest.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.haml-0.7.1.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.haml-latest.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.handlebars-0.7.1.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.handlebars-latest.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.hoptoad-0.7.1.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.hoptoad-latest.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.json-0.7.1.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.json-latest.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.meld-0.7.1.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.meld-latest.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.mustache-0.7.1.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.mustache-latest.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.nested_params-0.7.1.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.nested_params-latest.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.oauth2-0.7.1.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.oauth2-latest.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.path_location_proxy-0.7.1.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.path_location_proxy-latest.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.pure-0.7.1.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.pure-latest.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.push_location_proxy-0.7.1.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.push_location_proxy-latest.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.storage-0.7.1.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.storage-latest.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.template-0.7.1.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.template-latest.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.title-0.7.1.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.title-latest.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.tmpl-0.7.1.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\plugins\sammy.tmpl-latest.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\sammy-0.7.1.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\min\sammy-latest.min.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\plugins\sammy.cache.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Assets\Scripts\sammy\plugins\sammy.data_location_proxy.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\plugins\sammy.ejs.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\plugins\sammy.exceptional.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\plugins\sammy.flash.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\plugins\sammy.form.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\plugins\sammy.form_2_json.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\plugins\sammy.googleanalytics.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\plugins\sammy.haml.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\plugins\sammy.handlebars.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\plugins\sammy.hoptoad.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\plugins\sammy.json.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\plugins\sammy.meld.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\plugins\sammy.mustache.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\plugins\sammy.nested_params.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\plugins\sammy.oauth2.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\plugins\sammy.path_location_proxy.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\plugins\sammy.pure.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\plugins\sammy.push_location_proxy.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\plugins\sammy.storage.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\plugins\sammy.template.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\plugins\sammy.title.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\plugins\sammy.tmpl.js" />
+    <EmbeddedResource Include="Assets\Scripts\sammy\sammy.js" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Assets\Scripts\inspector\commonSammyEvents.js" />
+    <EmbeddedResource Include="Assets\Scripts\inspector\templates\globalNav.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Assets\Scripts\inspector\templates\home.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Assets\Scripts\inspector\templates\description.html" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
