ongoing work on new inspector. getting closer, but need some new features added to euclid.js first

--- a/src/sdk/CompositeInspector/CompositeInspector.csproj
+++ b/src/sdk/CompositeInspector/CompositeInspector.csproj
@@ -369,7 +369,7 @@
     <EmbeddedResource Include="Assets\Scripts\sammy\sammy.js" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Assets\Scripts\inspector\commonSammyEvents.js" />
+    <EmbeddedResource Include="Assets\Scripts\inspector\common.js" />
     <EmbeddedResource Include="Assets\Scripts\inspector\templates\globalNav.html" />
   </ItemGroup>
   <ItemGroup>
