--- a/src/sdk/CompositeInspector/CompositeInspector.csproj
+++ b/src/sdk/CompositeInspector/CompositeInspector.csproj
@@ -394,6 +394,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Assets\Scripts\inspector\templates\forms\readModel.html" />
   </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Assets\Scripts\inspector\templates\forms\inputModel.html" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
